--- a/infrabookingapp/html/footer.html
+++ b/infrabookingapp/html/footer.html
@@ -2,7 +2,9 @@
 <html>
 
 <body>
-    <footer class="footer"> <span class="footer_heighlight">&copy;copyright VWITS  2021 All Rights Reserved </span></footer>
+    <footer class="footer">
+        <span class="footer_heighlight">&copy;copyright</span> VWITS 2021 All Rights Reserved
+    </footer>
 </body>
 
 </html>
