--- a/infrabookingapp/html/room/add_room.html
+++ b/infrabookingapp/html/room/add_room.html
@@ -10,9 +10,7 @@
 
 
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <link href="../../css/bootstrap/bootstrap.min.css" rel="stylesheet">
     <!-- icon logo -->
     <link rel="icon" href="../images/favicon.ico" type="image/icon type">
     <!-- external css -->
@@ -37,15 +35,15 @@
     </script>
 </head>
 
-<body onload="check_session()">
+<body onload="check_session('true')">
 
-    <h1 class="background"> <img src="../images/logo1.png"> </h1>
+    <h1 class="img-fluid img-thumbnail background"> <img src="../images/logo1.png"> </h1>
 
     <header>
 
 
     </header>
-    <nav class="container-fluid background">
+    <!-- <nav class="container-fluid background">
         <a href="../index.html" class="nav_element" style=" color: white;">HOME  </a>
 
 
@@ -60,7 +58,29 @@
 
         <a href="#" class="nav_element" style=" color: white;">ABOUT US </a>
         <a href="../user/login.html" class="nav_element" style=" color: white;" id="nav_logout" onclick="clearSession()">LOGOUT </a>
+    </nav> -->
+
+    <nav class="navbar navbar-expand-lg  " style="background-color: #621B36; color: white;">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#" style="color: white; font-weight: bold;">INFRABOOKING APP</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link nav_element" aria-current="page" href="../index.html" style="color: white;">Home</a>
+                    <a class="nav-link nav_element" href="../user/login.html" style="color: white;" id="nav_login">Login</a>
+                    <a class="nav-link nav_element" href="../user/register.html" style="color: white;" id="nav_registration">Registration</a>
+                    <a class="nav-link nav_element" href="../booking/book_room.html" style="color: white;" id="nav_book_room">Book room</a>
+                    <a class="nav-link nav_element" href="#" style="color: white;" id="nav_add_room">Add room</a>
+                    <a class="nav-link nav_element" href="show_room.html" style="color: white;" id="nav_show_all_room">Show all room</a>
+                    <a class="nav-link nav_element" href="#" style="color: white;">About us</a>
+                    <a class="nav-link nav_element" href="../user/login.html" style="color: white;" id="nav_logout" onclick="clearSession()">Logout</a>
+                </div>
+            </div>
+        </div>
     </nav>
+
 
     <section class="container-sm col-sm-12 col-md-4 col-lg-4 ">
 
@@ -75,7 +95,7 @@
 
                 <section class="mb-3 ">
                     <label for="room_name" class="form-label "> Room Name</label>
-                    <input class="form-control " type="text " placeholder="Enter Room Name" list="rooms_name" name="room_name" id="room_name" onkeyup="validateAddRoomForm()" required autofocus>
+                    <input class="form-control " type="text " placeholder="Enter Room Name" list="rooms_name" name="room_name" id="room_name" onkeyup onblur="validateAddRoomForm()" required autofocus>
 
 
                 </section>
