--- a/infrabookingapp/html/user/register.html
+++ b/infrabookingapp/html/user/register.html
@@ -8,10 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <!-- Bootstrap CSS  -->
+    <link href="../../css/bootstrap/bootstrap.min.css" rel="stylesheet">
     <!-- icon logo -->
     <link rel="icon" href="../images/favicon.ico" type="image/icon type">
     <!-- external css -->
@@ -33,17 +31,17 @@
     </script>
 </head>
 
-<body onload="check_session()">
+<body onload="check_session('false')">
 
 
 
-    <h1 class="background"> <img src="../images/logo1.png"> </h1>
+    <h1 class="img-fluid img-thumbnail background"> <img src="../images/logo1.png"> </h1>
 
     <header>
 
 
     </header>
-    <nav class="container-fluid background">
+    <!-- <nav class="container-fluid background">
         <a href="../index.html" class="nav_element" style=" color: white;">HOME  </a>
 
 
@@ -58,6 +56,27 @@
 
         <a href="#" class="nav_element" style=" color: white;">ABOUT US </a>
         <a href="login.html" class="nav_element" style=" color: white;" id="nav_logout" onclick="clearSession()">LOGOUT </a>
+    </nav> -->
+
+    <nav class="navbar navbar-expand-lg  " style="background-color: #621B36; color: white;">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#" style="color: white; font-weight: bold;">INFRABOOKING APP</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link nav_element" aria-current="page" href="../index.html" style="color: white;">Home</a>
+                    <a class="nav-link nav_element" href="login.html" style="color: white;" id="nav_login">Login</a>
+                    <a class="nav-link nav_element" href="#" style="color: white;" id="nav_registration">Registration</a>
+                    <a class="nav-link nav_element" href="../booking/book_room.html" style="color: white;" id="nav_book_room">Book room</a>
+                    <a class="nav-link nav_element" href="../room/add_room.html" style="color: white;" id="nav_add_room">Add room</a>
+                    <a class="nav-link nav_element" href="../room/show_room.html" style="color: white;" id="nav_show_all_room">Show all room</a>
+                    <a class="nav-link nav_element" href="#" style="color: white;">About us</a>
+                    <a class="nav-link nav_element" href="login.html" style="color: white;" id="nav_logout" onclick="clearSession()">Logout</a>
+                </div>
+            </div>
+        </div>
     </nav>
 
 
@@ -74,25 +93,25 @@
 
                 <section class="mb-3 ">
                     <label for="name" class="form-label "> Name</label>
-                    <input class="form-control " type="text " placeholder="Type your name " name="name" id="name" onkeyup="validateRegisterForm()" required autofocus>
+                    <input class="form-control " type="text " placeholder="Type your name " name="name" id="name" onblur onkeyup="validateRegisterForm()" required autofocus>
 
 
                 </section>
                 <section class="mb-3 ">
                     <label for="email" class="form-label "> Email Address </label>
-                    <input class="form-control " type="email" placeholder="Type your email address " name="email" id="email" onkeyup="validateRegisterForm()" required>
+                    <input class="form-control " type="email" placeholder="Type your email address " name="email" id="email" onblur onkeyup="validateRegisterForm()" required>
 
 
                 </section>
                 <section class="mb-3 ">
                     <label for="pass" class="form-label ">Password</label>
-                    <input type="password" class="form-control " placeholder="Type your password " name="password" id="password" onkeyup="validateRegisterForm()" required>
+                    <input type="password" class="form-control " placeholder="Type your password " name="password" id="password" onblur onkeyup="validateRegisterForm()" required>
 
                 </section>
 
                 <section class=" mb-3 ">
                     <label for="cpass " class="form-label ">Confirm Password</label>
-                    <input type="password" class="form-control " placeholder="Re-type your password " name="cpassword" id="cpassword" onkeyup="validateRegisterForm()" required>
+                    <input type="password" class="form-control " placeholder="Re-type your password " name="cpassword" id="cpassword" onblur onkeyup="validateRegisterForm()" required>
 
                 </section>
 
