--- a/infrabookingapp/html/room/add_room.html
+++ b/infrabookingapp/html/room/add_room.html
@@ -8,9 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
-
-    <!-- CSS only -->
+    <!-- Boostrap CSS & JS -->
     <link href="../../css/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+
     <!-- icon logo -->
     <link rel="icon" href="../images/favicon.ico" type="image/icon type">
     <!-- external css -->
@@ -18,17 +19,10 @@
     <!-- external js -->
     <script src="../../js/validateForm.js"></script>
     <script src="../../js/session.js"></script>
-
-    <!-- jquery cdn file -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-
-
-
+    <!-- jquery  file -->
+    <script src="../../js/jquery-3.6.0.min.js"></script>
+    <!-- script to load footer -->
     <script>
-        $(function() {
-            $("#includedHeader").load("../header.html");
-        });
-
         $(function() {
             $("#includedFooter").load("../footer.html");
         });
@@ -36,38 +30,21 @@
 </head>
 
 <body onload="check_session('true')">
-
-    <h1 class="img-fluid img-thumbnail background"> <img src="../images/logo1.png"> </h1>
-
+    <!-- header start -->
     <header>
-
-
+        <h1 class="img-fluid img-thumbnail background"> <img src="../images/logo1.png"> </h1>
     </header>
-    <!-- <nav class="container-fluid background">
-        <a href="../index.html" class="nav_element" style=" color: white;">HOME  </a>
+    <!-- header end -->
 
-
-        <a href="../user/login.html" class="nav_element" style=" color: white;" id="nav_login">LOGIN </a>
-
-
-        <a href="../user/register.html" class="nav_element" style=" color: white;" id="nav_registration">REGISTRATION</a>
-
-        <a href="../booking/book_room.html" class="nav_element" style=" color: white;" id="nav_book_room">BOOK ROOM </a>
-        <a href="add_room.html" class="nav_element" style=" color: white;" id="nav_add_room">ADD ROOMS </a>
-        <a href="show_room.html" class="nav_element" style=" color: white;" id="nav_show_all_room">SHOW ALL ROOMS </a>
-
-        <a href="#" class="nav_element" style=" color: white;">ABOUT US </a>
-        <a href="../user/login.html" class="nav_element" style=" color: white;" id="nav_logout" onclick="clearSession()">LOGOUT </a>
-    </nav> -->
-
-    <nav class="navbar navbar-expand-lg  " style="background-color: #621B36; color: white;">
+    <!-- navbar start -->
+    <nav class="navbar navbar-expand-lg navbar navbar-dark  " style="background-color: #621B36; color: white;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#" style="color: white; font-weight: bold;">INFRABOOKING APP</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
+            <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
+                <div class="navbar-nav ms-auto">
                     <a class="nav-link nav_element" aria-current="page" href="../index.html" style="color: white;">Home</a>
                     <a class="nav-link nav_element" href="../user/login.html" style="color: white;" id="nav_login">Login</a>
                     <a class="nav-link nav_element" href="../user/register.html" style="color: white;" id="nav_registration">Registration</a>
@@ -76,48 +53,37 @@
                     <a class="nav-link nav_element" href="show_room.html" style="color: white;" id="nav_show_all_room">Show all room</a>
                     <a class="nav-link nav_element" href="#" style="color: white;">About us</a>
                     <a class="nav-link nav_element" href="../user/login.html" style="color: white;" id="nav_logout" onclick="clearSession()">Logout</a>
+                    <span class="user_name nav-link nav_element" id="id_user_name" style="color: white;"> </span>
                 </div>
             </div>
         </div>
     </nav>
+    <!-- navbar end -->
 
-
+    <!-- form start -->
     <section class="container-sm col-sm-12 col-md-4 col-lg-4 ">
-
         <section class="card-body">
             <h2 class="text-center"><strong>Add </strong> Room</h2>
-
             <section class="card-text text-center">
                 <span id="blankMsg" class="error_msg"> </span>
             </section>
             <form class="login100-form" method="POST" action="#">
-
-
                 <section class="mb-3 ">
                     <label for="room_name" class="form-label "> Room Name</label>
                     <input class="form-control " type="text " placeholder="Enter Room Name" list="rooms_name" name="room_name" id="room_name" onkeyup onblur="validateAddRoomForm()" required autofocus>
-
-
                 </section>
                 <section class="mb-3 ">
                     <label for="Capacity" class="form-label "> Capacity</label>
                     <input class="form-control " type="number" placeholder="Enter Capacity of Room" min="1" max="150" name="capacity" id="capacity" onkeyup onblur="validateAddRoomForm()" required>
-
-
                 </section>
                 <section class="mb-3 ">
                     <label for="image" class="form-label ">Add Image</label>
                     <input type="file" class="form-control " name="image" required>
-
                 </section>
-
-
-
                 <section class="d-grid gap-1 col-6 mx-auto ">
                     <button class="btn btn-danger background " style="background-color:#621B36 ; " type="submit " name="button" id="btn_add_room" disabled>
                             <strong>Add Room</strong>
                         </button>
-
                 </section>
                 <datalist id="rooms_name">
                         <option value="Meeting Room"></option>
@@ -125,20 +91,12 @@
                         <option value="Celebration Room"></option>
                         <option value="Board Room"></option>
                     </datalist>
-
-
-
             </form>
         </section>
     </section>
-
-
-
-
-
+    <!-- form end -->
 </body>
-
+<!-- loading footer -->
 <section id="includedFooter"></section>
-
 
 </html>
