--- a/infrabookingapp/html/user/register.html
+++ b/infrabookingapp/html/user/register.html
@@ -8,23 +8,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
-    <!-- Bootstrap CSS  -->
+    <!-- Bootstrap CSS & JS  -->
     <link href="../../css/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <script src="../../css/bootstrap/bootstrap.bundle.min.js"></script>
+
     <!-- icon logo -->
     <link rel="icon" href="../images/favicon.ico" type="image/icon type">
-    <!-- external css -->
+    <!-- external JS -->
     <link rel="stylesheet" href="../../css/style.css">
     <script src="../../js/validateForm.js"></script>
     <script src="../../js/session.js"></script>
 
     <!-- jquery cdn file -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-
+    <script src="../../js/jquery-3.6.0.min.js"></script>
+    <!-- script to load footer -->
     <script>
-        $(function() {
-            $("#includedHeader").load("../header.html");
-        });
-
         $(function() {
             $("#includedFooter").load("../footer.html");
         });
@@ -32,40 +30,21 @@
 </head>
 
 <body onload="check_session('false')">
-
-
-
-    <h1 class="img-fluid img-thumbnail background"> <img src="../images/logo1.png"> </h1>
-
+    <!-- header start  -->
     <header>
-
-
+        <h1 class="img-fluid img-thumbnail background"> <img src="../images/logo1.png"> </h1>
     </header>
-    <!-- <nav class="container-fluid background">
-        <a href="../index.html" class="nav_element" style=" color: white;">HOME  </a>
+    <!-- header end -->
 
-
-        <a href="login.html" class="nav_element" style=" color: white;">LOGIN </a>
-
-
-        <a href="register.html" class="nav_element" style=" color: white;" id="nav_registration">REGISTRATION</a>
-
-        <a href="../booking/book_room.html" class="nav_element" style=" color: white;" id="nav_book_room">BOOK ROOM </a>
-        <a href="../room/add_room.html" class="nav_element" style=" color: white;" id="nav_add_room">ADD ROOMS </a>
-        <a href="../room/show_room.html" class="nav_element" style=" color: white;" id="nav_show_all_room">SHOW ALL ROOMS </a>
-
-        <a href="#" class="nav_element" style=" color: white;">ABOUT US </a>
-        <a href="login.html" class="nav_element" style=" color: white;" id="nav_logout" onclick="clearSession()">LOGOUT </a>
-    </nav> -->
-
-    <nav class="navbar navbar-expand-lg  " style="background-color: #621B36; color: white;">
+    <!-- navbar start  -->
+    <nav class="navbar navbar-expand-lg navbar navbar-dark  " style="background-color: #621B36; color: white;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#" style="color: white; font-weight: bold;">INFRABOOKING APP</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
+                <div class="navbar-nav ms-auto">
                     <a class="nav-link nav_element" aria-current="page" href="../index.html" style="color: white;">Home</a>
                     <a class="nav-link nav_element" href="login.html" style="color: white;" id="nav_login">Login</a>
                     <a class="nav-link nav_element" href="#" style="color: white;" id="nav_registration">Registration</a>
@@ -78,8 +57,9 @@
             </div>
         </div>
     </nav>
+    <!-- navbar end -->
 
-
+    <!-- form start -->
     <section class="container-sm  col-sm-12 col-md-4 col-lg-4">
 
         <section class="card-body">
@@ -94,54 +74,38 @@
                 <section class="mb-3 ">
                     <label for="name" class="form-label "> Name</label>
                     <input class="form-control " type="text " placeholder="Type your name " name="name" id="name" onblur onkeyup="validateRegisterForm()" required autofocus>
-
-
                 </section>
                 <section class="mb-3 ">
                     <label for="email" class="form-label "> Email Address </label>
                     <input class="form-control " type="email" placeholder="Type your email address " name="email" id="email" onblur onkeyup="validateRegisterForm()" required>
-
-
                 </section>
                 <section class="mb-3 ">
                     <label for="pass" class="form-label ">Password</label>
                     <input type="password" class="form-control " placeholder="Type your password " name="password" id="password" onblur onkeyup="validateRegisterForm()" required>
-
                 </section>
 
                 <section class=" mb-3 ">
                     <label for="cpass " class="form-label ">Confirm Password</label>
                     <input type="password" class="form-control " placeholder="Re-type your password " name="cpassword" id="cpassword" onblur onkeyup="validateRegisterForm()" required>
-
                 </section>
-
                 <section class=" d-grid gap-1 col-6 mx-auto ">
                     <button class="btn btn-danger background" style="background-color:#621B36 ; " type="submit " name="register" id="btn_register" disabled>
                             <strong>Register</strong>
                         </button>
-
                 </section>
-
                 <section class="mb-3 link">
                     Already a member?
                     <a href="login.html " style="text-decoration: none; ">
                         <strong class="link_text"> Login  </strong>
                     </a>
-
                 </section>
-
-
             </form>
         </section>
     </section>
-
-
-
-
+    <!-- form end -->
 
 </body>
-
+<!-- loading footer  -->
 <section id="includedFooter"></section>
-
 
 </html>
